--- a/regress78/blog/templates/common/layout.html
+++ b/regress78/blog/templates/common/layout.html
@@ -57,7 +57,8 @@
         <div class="header-row fixed">
             <div id="logo">
                 <a href="/">
-                    <img src="{% static '/blog/images/logo.png'%}" salt="Regress78 logo">
+                    <img src="{% static '/blog/images/logo_black.png'%}"
+                         salt="Regress78 logo">
                 </a>
             </div>
             <div id="evhead"></div>
