--- a/regress78/blog/templates/blog/list.html
+++ b/regress78/blog/templates/blog/list.html
@@ -4,7 +4,7 @@
 
 
 {% block main_content %}
-    {% for topic in list %}
+    {% for topic in list.object_list %}
         <div class="bl2 fixed">
             <div class="bl2-cover">
                 <a href="/blog/topic/{{ topic.id }}/">
@@ -26,11 +26,12 @@
                     {{ topic.preview|safe }}
                 </div>
                 <div class="bl2-lvc">
-                    <a href="#" id="getlike" class="info-like" data-post_id="14" title="Like">1</a>
+                    <a id="getlike" class="info-like" data-post_id="14" title="Like">1</a>
                     <div class="info-view">{{ topic.hits }}</div>
                 </div>
                 <div class="bl2-date">{{ topic.date_published|localize }}</div>
             </div>
         </div>
     {% endfor %}
+    {% include "blog/pagination.html" %}
 {% endblock %}
