--- a/regress78/blog/templates/common/layout.html
+++ b/regress78/blog/templates/common/layout.html
@@ -70,7 +70,11 @@
             {% block main_content %}{% endblock %}
         </div>
     </div>
-
+    <div id="footer-bottom">
+        <div class="footer-copyright">
+            © {% now "Y" %} REGRESS RADIO. Some Rights Reserved.
+        </div>
+    </div>
     <script type="text/javascript">
         jQuery(document).ready(function($) {
             $.backstretch("{% static '/blog/images/background.png' %}");
