--- a/regress78/blog/templates/blog/list.html
+++ b/regress78/blog/templates/blog/list.html
@@ -26,7 +26,7 @@
                     {{ topic.preview|safe }}
                 </div>
                 <div class="bl2-lvc">
-                    <a id="getlike" class="info-like" data-post_id="14" title="Like">1</a>
+                    <a id="getlike" class="info-like" data-post_id="{{ topic.id }}" title="Like">1</a>
                     <div class="info-view">{{ topic.hits }}</div>
                 </div>
                 <div class="bl2-date">{{ topic.date_published|localize }}</div>
