progress #3 - Create dummy data

--- a/regress78/records/templates/records/list.html
+++ b/regress78/records/templates/records/list.html
@@ -3,8 +3,7 @@
 {% load l10n %}
 
 {% block main_content %}
-    {{ list }}
     {% for topic in list.object_list %}
-        1
+        {{ topic }}
     {% endfor %}
 {% endblock %}
