--- a/regress78/blog/templates/common/layout.html
+++ b/regress78/blog/templates/common/layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load thumbnail %}
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ru-RU">
 <head>
@@ -61,7 +62,21 @@
                          salt="Regress78 logo">
                 </a>
             </div>
-            <div id="evhead"></div>
+            <div id="evhead">
+            {% for banner in adv %}
+                <div class="evhead-cont">
+                    <a href="{{ banner.link }}">
+                        <div class="evhead-bg"></div>
+                        {% thumbnail banner.pic '203x110' crop='center' as thumb %}
+                            <img src="{{ thumb.url }}"/>
+                        {% endthumbnail %}
+                        <div class="evhead-date">{{ banner.event_date | date:"d M" }}</div>
+                        <div class="evhead-week">{{ banner.event_week_day }}</div>
+                        <div class="evhead-loc"><span>{{ banner.event_location }}</span></div>
+                    </a>
+                </div>
+            {% endfor %}
+            </div>
         </div>
         {% include "common/top_menu.html" %}
     </div>
