--- a/regress78/blog/templates/common/layout.html
+++ b/regress78/blog/templates/common/layout.html
@@ -6,11 +6,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' />
     <title></title>
-    <link rel="shortcut icon" href="http://master.regress78.com/wp-content/themes/beaton/favicon.ico" />
+    <link rel="shortcut icon" href="{% static 'blog/images/favicon.ico' %}" />
     <title>{{ title }}</title>
     <link rel='dns-prefetch' href='//fonts.googleapis.com' />
     <link rel='dns-prefetch' href='//s.w.org' />
-    <link rel="alternate" type="application/rss+xml" title="REGRESS RADIO &raquo; Лента комментариев к &laquo;Home&raquo;" href="http://master.regress78.com/?feed=rss2&#038;page_id=42" />
     <script type="text/javascript">
         window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/svg\/","svgExt":".svg","source":{"concatemoji":"http:\/\/master.regress78.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.6.2"}};
         !function(a,b,c){function d(a){var c,d,e,f,g,h=b.createElement("canvas"),i=h.getContext&&h.getContext("2d"),j=String.fromCharCode;if(!i||!i.fillText)return!1;switch(i.textBaseline="top",i.font="600 32px Arial",a){case"flag":return i.fillText(j(55356,56806,55356,56826),0,0),!(h.toDataURL().length<3e3)&&(i.clearRect(0,0,h.width,h.height),i.fillText(j(55356,57331,65039,8205,55356,57096),0,0),c=h.toDataURL(),i.clearRect(0,0,h.width,h.height),i.fillText(j(55356,57331,55356,57096),0,0),d=h.toDataURL(),c!==d);case"diversity":return i.fillText(j(55356,57221),0,0),e=i.getImageData(16,16,1,1).data,f=e[0]+","+e[1]+","+e[2]+","+e[3],i.fillText(j(55356,57221,55356,57343),0,0),e=i.getImageData(16,16,1,1).data,g=e[0]+","+e[1]+","+e[2]+","+e[3],f!==g;case"simple":return i.fillText(j(55357,56835),0,0),0!==i.getImageData(16,16,1,1).data[0];case"unicode8":return i.fillText(j(55356,57135),0,0),0!==i.getImageData(16,16,1,1).data[0];case"unicode9":return i.fillText(j(55358,56631),0,0),0!==i.getImageData(16,16,1,1).data[0]}return!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g,h,i;for(i=Array("simple","flag","unicode8","diversity","unicode9"),c.supports={everything:!0,everythingExceptFlag:!0},h=0;h<i.length;h++)c.supports[i[h]]=d(i[h]),c.supports.everything=c.supports.everything&&c.supports[i[h]],"flag"!==i[h]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[i[h]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
@@ -95,47 +94,27 @@
             $.backstretch("{% static 'blog/images/background.png' %}");
         });
     </script>
-    <script type='text/javascript'>
-        /* <![CDATA[ */
-        var ajax_var = {"url":"http:\/\/master.regress78.com\/wp-admin\/admin-ajax.php","nonce":"d7a648ff77"};
-        /* ]]> */
-    </script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/post-like.js?ver=1.0'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/plugins/responsive-menu-data/js/responsive-menu-1.js?ver=4.6.2'></script>
-    <script type='text/javascript'>
-        /* <![CDATA[ */
-        var wc_add_to_cart_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/?wc-ajax=%%endpoint%%","i18n_view_cart":"\u041f\u0435\u0440\u0435\u0439\u0442\u0438 \u0432 \u043a\u043e\u0440\u0437\u0438\u043d\u0443","cart_url":"http:\/\/master.regress78.com","is_cart":"","cart_redirect_after_add":"no"};
-        /* ]]> */
-    </script>
-    <script type='text/javascript' src='//master.regress78.com/wp-content/plugins/woocommerce/assets/js/frontend/add-to-cart.min.js?ver=2.6.4'></script>
-    <script type='text/javascript' src='//master.regress78.com/wp-content/plugins/woocommerce/assets/js/jquery-blockui/jquery.blockUI.min.js?ver=2.70'></script>
-    <script type='text/javascript'>
-        /* <![CDATA[ */
-        var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/?wc-ajax=%%endpoint%%"};
-        /* ]]> */
-    </script>
-    <script type='text/javascript' src='//master.regress78.com/wp-content/plugins/woocommerce/assets/js/frontend/woocommerce.min.js?ver=2.6.4'></script>
-    <script type='text/javascript' src='//master.regress78.com/wp-content/plugins/woocommerce/assets/js/jquery-cookie/jquery.cookie.min.js?ver=1.4.1'></script>
-    <script type='text/javascript'>
-        /* <![CDATA[ */
-        var wc_cart_fragments_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/?wc-ajax=%%endpoint%%","fragment_name":"wc_fragments"};
-        /* ]]> */
-    </script>
-    <script type='text/javascript' src='//master.regress78.com/wp-content/plugins/woocommerce/assets/js/frontend/cart-fragments.min.js?ver=2.6.4'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/slider.revolution.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/slider.tools.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/prettyPhoto.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/backstretch.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/carouFredSel.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/easy-ticker.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/hoverex.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/idTabs.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/flexslider.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/royal.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/sdk.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/audioplayer.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/radio/nativeflashradiov3.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-content/themes/beaton/js/script.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-includes/js/comment-reply.min.js?ver=4.6.2'></script>
-    <script type='text/javascript' src='http://master.regress78.com/wp-includes/js/wp-embed.min.js?ver=4.6.2'></script>
+    <script type='text/javascript' src="{% static 'blog/js/post-like.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/responsive-menu-1.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/add-to-cart.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/jquery.blockUI.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/woocommerce.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/jquery.cookie.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/cart-fragments.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/slider.revolution.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/slider.tools.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/prettyPhoto.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/backstretch.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/carouFredSel.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/easy-ticker.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/hoverex.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/idTabs.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/flexslider.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/royal.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/sdk.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/audioplayer.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/nativeflashradiov3.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/script.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/comment-reply.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'blog/js/wp-embed.min.js' %}"></script>
 </body>
