--- a/regress78/photo/templates/photo/list.html
+++ b/regress78/photo/templates/photo/list.html
@@ -23,7 +23,7 @@
                                 <h2>
                                     <a href="/photo/gallery/{{ gallery.id }}/">{{ gallery.name }}</a>
                                 </h2>
-                            </div><!-- end .pv2-title -->
+                            </div>
                         </div>
                     </div>
                 </div>
