--- a/regress78/blog/templates/blog/list.html
+++ b/regress78/blog/templates/blog/list.html
@@ -1,34 +1,8 @@
 {% extends 'common/inner_layout.html' %}
-{% load thumbnail %}
-{% load l10n %}
-
 
 {% block main_content %}
     {% for topic in list.object_list %}
-        <div class="bl2 fixed">
-            <div class="bl2-cover">
-                <a href="/blog/topic/{{ topic.id }}/">
-                {% thumbnail topic.pic '720x360' crop='center' as thumb %}
-                    <img src="{{ thumb.url }}" alt="{{ topic.title }}"/>
-                {% endthumbnail %}
-                </a>
-            </div>
-            <div class="bl2-text">
-                <div class="bl2-title">
-                    <h2>
-                        <a href="/blog/topic/{{ topic.id }}/">{{ topic.title }}</a>
-                    </h2>
-                </div>
-                <div>
-                    {{ topic.preview|safe }}
-                </div>
-                <div class="bl2-lvc">
-                    <a id="getlike" class="info-like" data-post_id="{{ topic.id }}" title="Like">1</a>
-                    <div class="info-view">{{ topic.hits }}</div>
-                </div>
-                <div class="bl2-date">{{ topic.date_published|localize }}</div>
-            </div>
-        </div>
+        {% include "blog/_blog_item.html" %}
     {% endfor %}
-    {% include "blog/pagination.html" %}
+    {% include "blog/_pagination.html" %}
 {% endblock %}
