progress #6 - added sticked posts on main

--- a/regress78/records/templates/records/list.html
+++ b/regress78/records/templates/records/list.html
@@ -3,7 +3,12 @@
 {% load l10n %}
 
 {% block main_content %}
-    {% for topic in list.object_list %}
-        {{ topic }}
-    {% endfor %}
+    <div class="page-title">
+        <h1 class="blog">Записи эфиров</h1>
+    </div>
+    <div class="blog-left">
+        {% for topic in list.object_list %}
+            {{ topic }}
+        {% endfor %}
+    </div>
 {% endblock %}
