--- a/regress78/records/templates/records/list.html
+++ b/regress78/records/templates/records/list.html
@@ -1,7 +1,4 @@
 {% extends 'common/inner_layout.html' %}
-{% load thumbnail %}
-{% load nbsp %}
-{% load l10n %}
 
 {% block main_content %}
     <div class="page-title">
@@ -10,29 +7,7 @@
     <div class="blog-left">
         <div class="mix">
             {% for topic in list.object_list %}
-                <div class="mix-cover">
-                    <div class="mix-bg"></div>
-                    {% thumbnail topic.pic '200x120' crop='center' as thumb %}
-                        <img src="{{ thumb.url }}" alt="Obsession Ibiza Global Radio Mixtape Summer 2015" />
-                    {% endthumbnail %}
-                    <a target="_blank"
-                       href="{{ topic.record_url }}" class="fap-single-track mix-play no-ajax"></a>
-                    <!-- {{ topic }} -->
-                </div>
-                <div class="mix-title">
-                    <h2>
-                        <a href="/record/{{ topic.id }}/">
-                            {{ topic.title }}
-                        </a>
-                    </h2>
-                    <span>{{topic.record_date|date:"d M Y"|nbsp}}</span>
-                </div>
-                <div class="mix-info">
-                    {% for dj in topic.dj.all %}
-                        <div class="mix-dj">{{ dj }}</div>
-                        <div class="mix-genre">&nbsp;</div>
-                    {% endfor %}
-                </div>
+                {% include "records/_record_item.html" %}
             {% endfor %}
             {% include "blog/_pagination.html" %}
         </div>
