progress #6 - added banners in right sidebar

--- a/regress78/index/templates/index/main.html
+++ b/regress78/index/templates/index/main.html
@@ -47,5 +47,6 @@
                 {% endfor %}
             </div>
         </div>
+        {% include "blog/_sidebar.html" %}
     </div>
 {% endblock %}
