progress #8 - added video backend

--- a/regress78/index/templates/index/main.html
+++ b/regress78/index/templates/index/main.html
@@ -46,6 +46,13 @@
                     </div>
                 {% endfor %}
             </div>
+            <h3 class="sh-title"></h3>
+            <h3 class="sh-title2"></h3>
+            <div class="sh-media3 fixed">
+                {% for topic in topic_stick_on_sidebar %}
+
+                {% endfor %}
+            </div>
         </div>
         {% include "blog/_sidebar.html" %}
     </div>
